<resources>
    <string name="app_name">BullshitGame</string>
    <string name="findGame">Find Game</string>
    <string name="hostGame">Host Game</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="waiting">Waiting for connection...</string>
    <string name="connected">Connected!</string>
    <string name="startHosting">Host game!</string>
    <string name="discoverable">Make discoverable</string>
    <string name="history">Show history</string>
    <string name="notify">Notify me me soon!</string>
</resources>
