<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dk.group11.bullshitgame.MainActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/findGameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/findGame"
            android:onClick="onClick"

            android:layout_weight="0"
            android:layout_margin="20dp"
            />
        <Button
            android:id="@+id/hostGameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hostGame"
            android:onClick="onClick"

            android:layout_weight="0"
            android:layout_margin="20dp"
            />
        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"

            android:layout_weight="0"
            android:layout_margin="20dp"
            />
        <Button
            android:id="@+id/closeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_weight="0"
            android:layout_margin="20dp"
            />

    </LinearLayout>


</RelativeLayout>
